# influencerflow

./: .gitignore  Dockerfile  README.md  ai_matching_implementation.md  ai_matching_implementation_summary.md  api_documentation.md  docker-compose.yml  elevenlabs_integration_guide.md  main.py  pgvector_migration_instructions.md  planning.md  pyproject.toml  render.yaml  requirements.txt  supabase_database_structure.md
app/: main.py
app/api/: router.py
app/api/v1/: ai.py  analytics.py  campaigns.py  contracts.py  creators.py  outreach.py  payments.py
app/core/: __init__.py  config.py  database.py  deps.py  redis.py  supabase.py
app/db/migrations/: add_embedding_vector.sql  create_match_creators_function.sql
app/db/migrations/versions/: elevenlabs_outreach_integration.py
app/models/: __init__.py  campaign.py  contract.py  creator.py  outreach.py  payment.py
app/schemas/: __init__.py  ai_matching.py  campaign.py  contract.py  creator.py  outreach.py  payment.py
app/services/: __init__.py  ai_service.py  analytics_service.py  campaign_service.py  contract_service.py  conversation_manager_backup.py  creator_service.py  elevenlabs_service.py  outreach_service.py  payment_service.py  supabase_service.py
docs/: elevenlabs_integration.md
