[project]
name = "influencerflow"
version = "0.1.0"
description = "AI-powered influencer marketing platform"
authors = [
    {name = "InfluencerFlow Team", email = "info@influencerflow.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.6",
    "redis>=4.6.0",
    "openai>=0.27.8",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.1",
    "psycopg2>=2.9.10",
    "faker>=37.3.0",
    "supabase>=2.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "ruff>=0.5.4",
    "pre-commit>=3.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "B", "I", "N"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
